# sandbox

./: .clang-format  .clang-format.min  README.md
Bash/: TIPS_AND_TRICKS.md  dump-proc.sh  extract-pkcs12-certs-keys.sh  filter-git-log.sh  generate-git-rev-header-file.sh  generate-patches.sh  vagrant-emergency-stop.sh
Bash/gen-patches/: series
Bash/snippets/: foreach.sh
BoostAsio/: Makefile  main.cpp  messagequeue.cpp  messagequeue.h
CMake/: BinaryOptimization.cmake  CompileConfig.cmake  TIPS_AND_TRICKS.md
CRTP/: crtp_static.cpp  crtp_static2.cpp
Cpp/: is_in.cpp  static_unique_ptr.cpp
Cpp/ApiDocumentation/: ApiDocumentation.cmake  CMakeLists.txt  doxygen.cfg.in  main.cpp
Cpp/BoostAsio/: Makefile  eventloop.cpp  eventloop.h  main.cpp
Cpp/CRTP/: main.cpp
Cpp/CppExamples/: main.cpp
Cpp/MovingAverage/: main.cpp
Cpp/Namespace/: README.md  common.h  main.cpp  test.h  test_stub.cpp
Cpp/OrderedJson/: CMakeLists.txt  main.cpp
Cpp/StubGenerator/: GenerateStub.cmake
Cpp/UdpEcho/: echo_client.c  (+1 more)
Git/: gitignore
IpAddress/: ipaddress.cpp  ipaddress.h  ipnetwork.cpp  ipnetwork.h
Linux/: NOTES.md
MovingAverage/: main.cpp
Namespace/: test.cpp  test_stub.h
Networking/: docker.md  iptables.md
StubGenerator/: CMakeLists.txt
TcpEchoPython/: echo_client.py
UdpEcho/: Makefile  README.md
Utils/: utils.cpp
Yocto/: TIPS_AND_TRICKS.md
python/: call-libc.py  create-func-runtime.py
scripts/: connect_wlan.sh  conv_webm2mp4.sh  create-clcerts-nopasswd.sh  extract-pkcs12-clcerts-nopasswd.sh  gdb-wait-proc.sh  list_all_dirs.sh  remove_all_orig.sh
(+14 files in other folders)
